--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ repository = "https://github.com/disler/diffbro.git"
 
 [tool.poetry.dependencies]
 python = "^3.8"
-openai = "^0.27.8"
+litellm = "^1.41.7"
 python-dotenv = "^1.0.0"
 pydantic = "^2.1.1"
 
